--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -1,9 +1,31 @@
-a{
+#cabecalho a{
     text-decoration:none;
     color:#908d8b;
 }
 
-a:active, a:hover{
+#cabecalho a:active,#cabecalho a:hover{
     color: #CFCFCF;
     text-decoration: none;
+}
+
+#iLeft a{
+    font-family: Georgia,"Bitstream Charter",serif;
+    color:#c33D2B;
+    font-size: 32px;
+    line-height: normal;
+    font-weight: normal;
+    text-shadow: 1px 1px 2px #111;
+    text-align: left;
+}
+
+#ileft a:hover{
+    text-decoration: underline;
+}
+
+small{
+    font-family: Arial,sans-serif;
+    color: #7D7D7D;
+    font-size: 14px;
+    line-height: 20px;
+    padding-left: 4px;
 }
