--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -94,8 +94,9 @@
                     </div>
                     <hr>
                     <div id='search'>
-                        <form>
-                            <input type='text' class='input_search' placeholder='Busca...'>
+                        <form method='post' action=''>{% csrf_token %}
+                        {{ form.as_p }}
+                            <input type='text' id='busca' name='busca' class='input_search' placeholder='Busca...'>
                             <input type='image' class='input_img' src='/static/img/searchbar_submit.jpg'>
                         </form>
                     </div>
