--- a/static/css/dota-estilo-classes.css
+++ b/static/css/dota-estilo-classes.css
@@ -139,3 +139,57 @@
     text-decoration:none;
 }
 
+.dlink{
+    font-family: Arial,sans-serif;
+    color: #7D7D7D;
+    font-size: 14px;
+    line-height: 20px;
+    margin-left:30px;
+}
+
+.dimg{
+    margin-left:30px;
+    margin-top:10px;
+    margin-bottom:5px;
+    border-radius:12px;
+}
+
+.dlink2{
+    font-family: Arial,sans-serif;
+    color: #7D7D7D;
+    font-size: 14px;
+    line-height: 20px;
+    position:absolute;
+    margin-left:380px;
+    margin-top:-195px;
+}
+
+.dimg2{
+    position:absolute;
+    margin-left:420px;
+    margin-top:-305px;
+    border-radius:6px;    
+}
+
+.dlink3{
+    font-family: Arial,sans-serif;
+    color: #7D7D7D;
+    font-size: 14px;
+    line-height: 20px;
+    position:absolute;
+    margin-left:380px;
+    margin-top:-75px;
+}
+
+.dimg3{
+    position:absolute;
+    margin-left:420px;
+    margin-top:-185px;  
+    border-radius:6px;      
+}
+
+.dimg:hover, .dimg2:hover, .dimg3:hover{
+    border:1px solid #c33D2B;
+}
+}
+
