--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -1,3 +1,16 @@
+h1{
+    color:#CFCFCF;;
+    font-family: goudy_trajan_boldbold,"times new roman",Arial,Sans-Serif;
+    text-transform: uppercase;
+    font-size: 32px;
+    line-height: normal;
+    font-weight: normal;
+    text-shadow: 1px 1px 2px #111;
+    text-align: left;
+    margin-left:135px;
+    margin-top:0px;
+}
+
 #cabecalho a{
     text-decoration:none;
     color:#908d8b;
