--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -27,7 +27,7 @@
             <div class='language'>Linguagem pt-br</div>            
             <div id='cabecaTitle' class='cabecaTitle' style='margin-top:10px;display:table;'>
                 <img id='logo1' src='/static/img/en_dota_logo_over.png' style='opacity:0;'>
-                <a target="_blank" href='http://br.dota2.com/?l=portuguese'><img id='logo2' src='/static/img/en_dota_logo.png'></a>
+                <a target="_blank" href=''><img id='logo2' src='/static/img/en_dota_logo.png'></a>
             </div>
             <div class='cabecaTitle'>
                 <a target='_blank' href='http://steamcommunity.com/market/'>
@@ -54,6 +54,25 @@
             </div>
             <div id='mid'>
                 <div id='destaque'>
+                    <br><center><h1>Destaques da Semana</h1></center>
+                    {% for post in list_destaque %}
+                        {% if forloop.first %}
+                            <div>
+                                <a><img class='dimg' src='{{ post.imagem }}' alt='imagem' width='300px' height='280px'></a><br>  
+                                <a class='dlink'>{{ post.titulo }}</a><br>                               
+                            </div>
+                        {% elif forloop.counter|divisibleby:2 %}  
+                            <div>
+                                <a><img class='dimg2' src='{{ post.imagem }}' alt='imagem' width='150px' height='125px'></a><br>  
+                                <a class='dlink2'>{{ post.titulo }}</a><br> 
+                            </div>                        
+                        {% elif forloop.counter|divisibleby:3 %} 
+                            <div>
+                                <a><img class='dimg3' src='{{ post.imagem }}' alt='imagem' width='150px' height='125px'></a><br>   
+                                <a class='dlink3'>{{ post.titulo }}</a><br>                                  
+                            </div>                        
+                        {% endif %}  
+                    {% endfor %}               
                 </div>
                 <div id='iLeft'>
                     <div id='posts' class='posts'>
@@ -61,10 +80,10 @@
                             <div>
                                 <a class='ilink'>{{ post.titulo }}</a><br>
                                 <small>{{ post.data_criacao }}</small><p>
-                                <img src='{{ post.imagem }}' alt='imagem' width='500px' height='250px'><p>  
-                                {{ post.corpo }}<p>
+                                <img style='margin-bottom:30px;' src='{{ post.imagem }}' alt='imagem' width='300px' height='250px' align='left'> 
+                                {{ post.corpo }}
                                 {% if post.video %}
-                                    <iframe width="500" height="345" src='{{ post.video }}'></iframe><p>
+                                    <iframe width="585" height="356" src='{{ post.video }}'></iframe><p>
                                 {% endif %}                                  
                             </div>
                             <hr width='90%' style='margin-left:-0px;'>
